--- a/src/ui/LoginForm.css
+++ b/src/ui/LoginForm.css
@@ -5,6 +5,9 @@
         padding: 20px;
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        width: 35%;
+        margin-top: 10%;
+        margin-left: 32%;
 }
 
 h2 {
